--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,11 @@ services:
   virtuoso:
     container_name: virtuoso-dendro
     image: feupinfolab/virtuoso-with-dendro-ontologies:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+          DBA_PASSWORD: dba
     ports:
       - target: 8890
         published: 8892
@@ -15,7 +20,7 @@ services:
       - "VIRT_Parameters_PageMapCheck=1"
       - "VIRT_Parameters_CheckpointInterval=0"
     volumes:
-        - ./volumes/virtuoso:/data
+        - ./volumes/virtuoso:/database
     networks:
       - dendro-docker
 
