--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   virtuoso:
     container_name: virtuoso-dendro
     image: feupinfolab/virtuoso-with-dendro-ontologies:latest
+    tty: true
     build:
       context: .
       dockerfile: Dockerfile
