Added iptables config to block outside communication until virtuoso finishes loading the ontologies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     container_name: virtuoso-dendro
     image: feupinfolab/virtuoso-with-dendro-ontologies:latest
     tty: true
+    privileged: true
     build:
       context: .
       dockerfile: Dockerfile
